bugfix: fixed the issue of clipped globe

--- a/src/components/CV/Globe/Globe.module.css
+++ b/src/components/CV/Globe/Globe.module.css
@@ -8,13 +8,12 @@
 
 .canvasContainer {
   position: relative;
-  min-width: 25vw;
+  width: 100%;
   height: 40vh;
   border-radius: 25%;
 }
 
 .canvas {
-  width: 100%;
   height: 100%;
   bottom: 0;
 }
